--- a/package.json
+++ b/package.json
@@ -65,6 +65,6 @@
     "prettier": "^2.7.1",
     "slate": "0.91.4",
     "ts-node": "10.9.1",
-    "typescript": "4.9.5"
+    "typescript": "^4.8.4"
   }
 }
